<resources>
    <string name="app_name">Past Lives</string>
    <string name="start">Talk with the seer</string>
    <string name="title">"Greetings. Do you want to know something about your past in other dimensions? "</string>
    <string name="title2">Come with me fellow stranger, I will tell you who or what you were</string>
    <string name="continueError">Please, I need this information so bad!</string>
    <string name="askName">Tell me, how others calls you? Do you have a name?</string>
    <string name="askDate">I need to know the date you came to this world.</string>
    <string name="askAnimal">What animal do you prefer as your companion?</string>
    <string name="askPlace">I can see something… You would rather live in… </string>
    <string name="askGift">I like you. Choose a gift.</string>
    <string name="thinking">Your past is coming to my mind…</string>
    <string name="chGift1">Sunglasses</string>
    <string name="chGift2">Cake</string>
    <string name="chGift3">Chessboard</string>
    <string name="hint">Your answer</string>
    <string name="next" translatable="false">&gt;</string>
    <string name="back" translatable="false">&lt;</string>
    <string name="backMessage">Why are you leaving me alone?</string>
    <string name="notAnswerMessage">You need to answer this.</string>
    <string name="story">You were somebody called %1$s, %2$s that %3$s.
        You died at %4$d years old by %5$s.</string>
    <!--
    <string-array name="animals">
        <item>Octopus</item>
        <item>Chameleon</item>
        <item>Pig</item>
        <item>Raven</item>
    </string-array>

    <string-array name="races">
        <item>a Cthulhu\'s offspring</item>
        <item>an Anunnaki\'s descendant</item>
        <item>an Uruk-hai</item>
        <item>a Nito\'s made creature</item>
    </string-array>
    <string-array name="features">
        <item>was the one of the most great thieves of its dimension</item>
        <item>was a mediocre citizen. You were dumb, lazy and ugly</item>
        <item>became the richest merchant in the city</item>
    </string-array>
    <string-array name="death">
        <item>falling off a cliff trying to reach a coin you saw below to buy beverage.
            For information only, your liver was grateful to finally die</item>
        <item>getting rooted by an ancient tree. You broke your back tripping over one of
            this tree\'s root and became tetraplegic. The last thing you saw was the tree wrapping you</item>
        <item>drowned while diving into the sea. You shouldn\'t have gone into that
            underwater cave trying to find that legendary fish</item>
        <item>… nevermind. Your body is still alive. You were abducted by aliens and they made
            your mind travel through dimensions when, finally, ended landing on you</item>
    </string-array>
    -->
</resources>